--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-project",
-  "version": "0.0.0",
+  "name": "library-app-front",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -17,10 +17,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-next": "^0.42.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.6",
-    "vue": "^3.3.4",
+    "vue": "3.5.27",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
@@ -34,9 +34,9 @@
     "@types/node": "^18.17.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^4.3.1",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "@vue/cli-service": "^5.0.0",
+    "@vitejs/plugin-basic-ssl": "^2.1.4",
+    "@vitejs/plugin-vue": "6.0.3",
+    "@vitejs/plugin-vue-jsx": "5.1.3",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
@@ -51,10 +51,10 @@
     "msw": "^1.3.2",
     "npm-run-all": "^4.1.5",
     "prettier": "3.2.5",
-    "typescript": "^5.5.4",
+    "typescript": "5.6.3",
     "typescript-eslint": "^7.18.0",
-    "vite": "^4.4.9",
+    "vite": "7.3.1",
     "vitest": "^0.34.5",
-    "vue-tsc": "^1.8.8"
+    "vue-tsc": "2.1.10"
   }
 }
