--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,12 @@ dist
 dist-ssr
 coverage
 *.local
-
+node_modules
+.env
+docker-compose.yml
+docker
 /cypress/videos/
+certs
 /cypress/screenshots/
 
 # Editor directories and files
